--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1502,16 +1502,26 @@
     <script>
       // Helper to get API base URL with fallback
       function getApiBaseUrl() {
+        let url;
         if (window.API && window.API.baseUrl) {
-          return window.API.baseUrl;
+          url = window.API.baseUrl;
+        } else {
+          // Fallback if config.js hasn't loaded yet
+          const hostname = window.location.hostname;
+          if (hostname === "localhost" || hostname === "127.0.0.1") {
+            url = "http://localhost:5000";
+          } else {
+            // Production fallback
+            url = "https://song-download-9889cf8e8f85.herokuapp.com";
+          }
         }
-        // Fallback if config.js hasn't loaded yet
-        const hostname = window.location.hostname;
-        if (hostname === "localhost" || hostname === "127.0.0.1") {
-          return "http://localhost:5000";
+
+        // Ensure no trailing slash
+        if (url && url.endsWith("/")) {
+          url = url.slice(0, -1);
         }
-        // Production fallback
-        return "https://song-download-9889cf8e8f85.herokuapp.com";
+
+        return url || "https://song-download-9889cf8e8f85.herokuapp.com";
       }
 
       let currentSearchId = null;
@@ -4071,17 +4081,25 @@
           // Only proxy if not on localhost (production environment)
           const hostname = window.location.hostname;
           if (hostname !== "localhost" && hostname !== "127.0.0.1") {
-            const apiBase = getApiBaseUrl();
+            let apiBase = getApiBaseUrl();
+
+            // Emergency fallback if apiBase is somehow empty
+            if (!apiBase || apiBase === "") {
+              console.error(
+                "CRITICAL: apiBase was empty in createLazyImage! Using hardcoded fallback."
+              );
+              apiBase = "https://song-download-9889cf8e8f85.herokuapp.com";
+            }
+
             console.log("Image proxy debug:", {
               hostname,
               apiBase,
               originalSrc: actualSrc.substring(0, 100),
-              windowAPI: window.API,
             });
+
             actualSrc = `${apiBase}/proxy_image?url=${encodeURIComponent(
               actualSrc
             )}`;
-            console.log("Final proxied URL:", actualSrc.substring(0, 150));
           }
         }
 
