--- a/frontend/index.html
+++ b/frontend/index.html
@@ -156,7 +156,7 @@
       }
 
       .search-box {
-        padding: 30px 20px;
+        padding: 10px 10px;
         margin-bottom: 50px;
       }
 
@@ -1251,8 +1251,31 @@
           grid-template-columns: 1fr;
         }
 
+        /* Mobile responsive for search type selector */
+        .search-type-selector {
+          margin: 0 10px 20px 10px;
+          gap: 8px;
+        }
+
+        .type-btn {
+          padding: 8px 15px;
+          font-size: 0.9em;
+          flex: 1;
+          min-width: 0;
+        }
+
+        .type-btn svg {
+          width: 14px;
+          height: 14px;
+        }
+
         .search-input-group {
           flex-direction: column;
+        }
+
+        /* Mobile responsive for URL result card */
+        .url-result-card {
+          padding: 15px !important;
         }
 
         /* Mobile responsive for YouTube preview */
@@ -1268,6 +1291,87 @@
         /* Mobile responsive for SoundCloud recommendations */
         .recommended-tracks-grid {
           grid-template-columns: 1fr !important;
+        }
+
+        /* Mobile responsive for preview grids (JioSaavn, SoundCloud, etc.) */
+        .preview-grid-generic,
+        .soundcloud-main-track {
+          grid-template-columns: 1fr !important;
+          gap: 15px !important;
+        }
+
+        .preview-grid-generic img,
+        .soundcloud-main-track img {
+          max-width: 250px;
+          margin: 0 auto;
+          display: block;
+        }
+
+        /* Mobile responsive for options */
+        .option-row {
+          flex-direction: column !important;
+          gap: 15px !important;
+        }
+
+        .option-group {
+          width: 100% !important;
+        }
+
+        /* Mobile responsive for buttons */
+        .download-btn,
+        .advanced-toggle {
+          font-size: 1em !important;
+          padding: 12px !important;
+        }
+
+        /* Mobile responsive for source header */
+        .source-header h2 {
+          font-size: 1.3em !important;
+          word-break: break-word;
+        }
+
+        /* Mobile responsive for recommended tracks cards */
+        .recommended-track-card > div {
+          flex-direction: column !important;
+          text-align: center;
+        }
+
+        .recommended-track-card img,
+        .recommended-track-card > div > div:first-child > div {
+          width: 100% !important;
+          height: auto !important;
+          aspect-ratio: 1 / 1;
+          max-width: 200px;
+          margin: 0 auto;
+        }
+
+        .recommended-track-card h5,
+        .recommended-track-card p,
+        .recommended-track-card div {
+          text-align: center;
+        }
+
+        /* Mobile responsive for tab buttons */
+        .options-tabs {
+          flex-wrap: wrap;
+        }
+
+        .tab-btn {
+          flex: 1 1 45%;
+          min-width: 120px;
+        }
+
+        /* Mobile responsive for text sizes */
+        h3 {
+          font-size: 1.2em !important;
+        }
+
+        h4 {
+          font-size: 1.1em !important;
+        }
+
+        h5 {
+          font-size: 1em !important;
         }
       }
 
@@ -2956,7 +3060,7 @@
                         <h3 style="font-size: 1.4em; margin-bottom: 15px; color: var(--accent-color); border-bottom: 2px solid var(--accent-color); padding-bottom: 8px;">
                             Main Track
                         </h3>
-                        <div style="display: grid; grid-template-columns: 200px 1fr; gap: 20px; margin-bottom: 20px; padding: 20px; background: var(--bg-secondary); border-radius: 12px;">
+                        <div class="soundcloud-main-track" style="display: grid; grid-template-columns: 200px 1fr; gap: 20px; margin-bottom: 20px; padding: 20px; background: var(--bg-secondary); border-radius: 12px;">
                             <div>
                                 <img src="${thumbnail}" alt="${
             mainTrack.title
@@ -3005,7 +3109,7 @@
             : 'data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100"><rect fill="%23333"/><text x="50%" y="50%" text-anchor="middle" dy=".3em" fill="%23666">No Thumbnail</text></svg>';
 
           previewHTML = `
-                    <div style="display: grid; grid-template-columns: 320px 1fr; gap: 20px; margin-bottom: 25px;">
+                    <div class="preview-grid-generic" style="display: grid; grid-template-columns: 320px 1fr; gap: 20px; margin-bottom: 25px;">
                         <div>
                             ${createLazyImage(
                               thumbnail,
